day1/SparseGridCode/analytical_examples/TASMANIAN_Python/ex1.err
  File "ex1.py", line 51
    for iK in range(iDepth)
                          ^
SyntaxError: invalid syntax
